No logic change, just make code look better.